--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,6 +4,7 @@
   "main": "borrar.js",
   "type": "module",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,7 +26,9 @@
     "express": "^4.21.2",
     "mongodb": "^6.13.1",
     "mongoose": "^8.10.2",
-    "mongose": "^0.0.2-security",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
